[FIX] hr_holidays: adapt stress days color to dark mode
The colors of the stress days in the calendar were not adapted for the
dark mode, they were too bright and thus unreadable.

task-3216055

closes odoo/odoo#114751

--- a/addons/hr_holidays/static/src/views/calendar/calendar_renderer.scss
+++ b/addons/hr_holidays/static/src/views/calendar/calendar_renderer.scss
@@ -5,7 +5,8 @@
         .o_calendar_widget {
             @for $size from 1 through length($o-colors) {
                 .hr_stress_day_#{$size - 1}:not(.fc-disabled-day) {
-                    background-color: lighten(nth($o-colors, $size), 25%) !important;
+                    background: nth($o-colors, $size) !important;
+                    opacity: 0.4;
                 }
             }
         }
